--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     --weight-regular: 400;
 
     /* Size */
-    --size-border-radius: 4px;
+    --size-border-radius: 10px;
 }
 
 /* Universal tags */
@@ -45,12 +45,19 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--color-white);
+    color: var(--color-dark-grey);
 }
 
 ul {
     list-style: none;
     padding-left: 0;
+}
+
+button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
 
 /* Typography */
@@ -86,7 +93,7 @@ p {
 #navbar {
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-pink);
+    background-color: var(--color-light-white);
     align-items: center; 
     padding: 16px;
 }
@@ -99,23 +106,48 @@ p {
 .navbar__menu__item {
     padding: 8px 12px;
     margin: 4px;
-    color: var(--color-white);
+    color: var(--color-dark-grey);
     cursor: pointer;
     border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-
+    font-weight: var(--weight-bold);
 }
 
 .navbar__logo {
     font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
-    color: var(--color-white);
+    color: var(--color-dark-grey);
 }
 
 .navbar__menu__item:hover {
-    background-color: var(--color-dark-pink);
+    background-color: var(--color-light-grey);
 }
 
+/* Home */
+
+#home {
+    background: url("imgs/home-background.jpg") center/cover no-repeat;
+    padding: 40px;
+    text-align: center;
+}
+
+.home_avatar {
+    width: 250px;
+    height: 250px;
+    border-radius: 15%;
+}
+
+.home__contact {
+    font-size: 20px;
+    font-weight: var(--weight-bold);
+    margin: 50px 20px 20px 20px;
+    padding: 8px 12px;
+    border: 2px solid;
+    border-radius: var(--size-border-radius);
+}
+
+.home__contact:hover {
+    color: var(--color-white);
+}
