--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     --font-regular: 18px;
     --font-small: 16px;
     --font-micro: 14px;
+    --font-micro-micro: 10px;
 
     /* Font weight */
     --weight-bold: 700;
@@ -29,6 +30,10 @@
 
     /* Size */
     --size-border-radius: 10px;
+    
+    /* Animation */
+    --animation-duration: 300ms;
+
 }
 
 /* Universal tags */
@@ -93,7 +98,7 @@ p {
 #navbar {
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-light-white);
+    background-color: var(--color-white);
     align-items: center; 
     padding: 16px;
 }
@@ -140,14 +145,104 @@ p {
 }
 
 .home__contact {
+    color: #FF7F50;
     font-size: 20px;
     font-weight: var(--weight-bold);
     margin: 50px 20px 20px 20px;
     padding: 8px 12px;
-    border: 2px solid;
+    border: 3.5px solid;
     border-radius: var(--size-border-radius);
+    transition: all var(--animation-duration) ease;
 }
 
 .home__contact:hover {
-    color: var(--color-white);
+    color: #718cd6;
+}
+
+/* Section Common */
+.section {
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* About */
+.about__majors {
+    display: flex;
+    justify-content:space-evenly;
+    margin: 60px 0px;
+}
+
+.major__icon {
+    color: #FF7F50;
+    width: 200px;
+    height: 200px;
+    font-size: 85px;
+    line-height: 190px;
+    border: 7px solid #ffc3ae;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    margin-inline: 40px;
+}
+
+.major__icon i{
+    transition: all var(--animation-duration) ease;
+}
+.major__icon {
+    transition: all var(--animation-duration) ease;
+}
+
+.major__icon:hover{
+    border-color: #b0bcdf;
+}
+
+.major__icon:hover i{
+    transform: scale(1.2) rotateY(180deg);
+    color: #718cd6;
+}
+
+.major__title, .major__description {
+    color: var(--color-dark-grey);
+}
+
+.major__description {
+    font-size: smaller;
+}
+
+.about__jobs {
+    margin-top: 100px;
+}
+
+.job {
+    display:flex;
+    justify-content:center;
+}
+
+.job_logo_1 {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+}
+.job_logo_2 {
+    width: 50px;
+    height: 20px;
+    margin: 15px 0px;
+}
+
+.job_description {
+    margin: 0 16px;
+    text-align: left;
+}
+
+.job__name, .job__period {
+    color: var(--color-light-grey);
+}
+
+.job__name {
+    font-size: var(--font-micro);
+}
+
+.job__period {
+    font-size: var(--font-micro-micro);
 }
