--- a/style.css
+++ b/style.css
@@ -201,7 +201,11 @@ p {
 .section {
     padding: 50px;
     text-align: center;
-    max-width: 1200px;
+    margin: auto;
+}
+
+.section__container {
+    max-width: 1000px;
     margin: auto;
 }
 
@@ -283,4 +287,63 @@ p {
 
 .job__period {
     font-size: var(--font-micro-micro);
+}
+
+
+/* Skill */
+
+#skills {
+    background-color: #fafafa;
+}
+
+.skillset {
+    display: flex;
+    background-color: #dedede;
+    margin: 20px 0;
+}
+
+.skillset__title {
+    font-weight: var(--weight-bold);
+    padding: 8px 0px;
+    margin: 0px;
+}
+
+.skillset_left {
+    flex-basis: 60%;
+    background-color: #bcbcbc;
+    padding: 20px 40px 50px 40px;
+}
+
+.skillset_right {
+    flex-basis: 40%;
+}
+
+.tools {
+    background-color: #d1d1d1;
+    padding: 20px;
+}
+
+.etc {
+    padding: 20px;
+}
+
+.skill_bar {
+    width: 100%;
+    height: 3px;
+    background-color: #4d4d4d;
+}
+
+.skill_value {
+    height: 3px;
+    background-color: orange;
+}
+
+.skill_description {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.etc__list{
+    
 }
