--- a/style.css
+++ b/style.css
@@ -229,10 +229,10 @@ p {
 }
 
 .major__icon i{
-    transition: all var(--animation-duration) ease;
+    transition: all 400ms ease;
 }
 .major__icon {
-    transition: all var(--animation-duration) ease;
+    transition: all 400ms ease;
 }
 
 .major__icon:hover{
@@ -240,8 +240,9 @@ p {
 }
 
 .major__icon:hover i{
-    transform: scale(1.2) rotateY(180deg);
+    transform: scale(1.3) rotateY(360deg);
     color: #718cd6;
+    border-color: #b0bcdf;
 }
 
 .major__title, .major__description {
@@ -306,11 +307,12 @@ p {
     font-weight: var(--weight-bold);
     padding: 8px 0px;
     margin: 0px;
+    font-size: var(--font-medium);
 }
 
 .skillset_left {
     flex-basis: 60%;
-    background-color: #bcbcbc;
+    background-color: #a9a9a9;
     padding: 20px 40px 50px 40px;
     border-top-left-radius: 8%;
     border-bottom-left-radius: 8%;
@@ -337,7 +339,7 @@ p {
 .skill_bar {
     width: 100%;
     height: 3px;
-    background-color: #4d4d4d;
+    background-color: #888888;
 }
 
 .skill_value {
@@ -351,6 +353,105 @@ p {
     margin: 20px 0px;
 }
 
-.etc__list{
-    
+/* Work */
+
+.work__categories {
+    margin: 40px;
+}
+
+.category__btn {
+    border: 1px solid var(--color-dark-white);
+    font-weight: 50;
+    border-radius: 6px;
+    font-size: var(--font-small);
+    padding: 8px 30px 8px 45px;
+    margin-inline: 7px;
+    transition: all var(--animation-duration) ease;
+}
+
+.category__btn:hover {
+    background-color: orange;
+    color: white;
+}
+
+.category__btn:hover .category__count{
+    top: 0;
+    opacity: 1;
+}
+
+.category__count {
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    color: orange;
+    font-weight: var(--weight-bold);
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    line-height: 20px;
+    position: relative;
+    top: -20px;
+    left: 10px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease;
+}
+
+.work_projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 900px;
+    margin: auto;
+}
+
+.project {
+    position: relative;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-light-white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project_img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.project_description {
+    position: absolute;
+    top: 0;
+    left:0;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transform: translateY(10px);
+    transition: all var(--animation-duration) ease;
+}
+
+.project:hover .project_description {
+    opacity: 70%;
+    transform: translateY(0px);
+}
+
+.project_description h3 {
+    color: white;
+}
+
+.project_description span {
+    color: white;
+}
+
+.project_line {
+    width: 50%;
+    height: 1px;
+    background-color: white;
+    position: relative;
+    left: 25%;
+    margin: 10px 0;
 }
