--- a/style.css
+++ b/style.css
@@ -455,3 +455,33 @@ p {
     left: 25%;
     margin: 10px 0;
 }
+
+/* Testimonial */
+
+#testimonial {
+    background-color: var(--color-light-white);
+}
+
+.testimonials {
+    margin: 40px;
+}
+
+.testimonial {
+    display: flex;
+    margin: 30px;
+}
+
+.testimonial__avatar {
+    min-width: 150px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.testimonal__speech-bubble {
+    background-color: white;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.testimonal__speech-bubble p {
+    margin: 12px 8px;
+}
