--- a/style.css
+++ b/style.css
@@ -168,6 +168,15 @@ p {
     background-color: var(--color-light-grey);
 }
 
+.navbar__toggle-btn {
+    position: absolute;
+    right: 32px;
+    top: 50px;
+    font-size: 24px;
+    color: var(--color-dark-grey);
+    display: none;
+}
+
 /* Home */
 
 #home {
@@ -211,9 +220,10 @@ p {
 
 /* About */
 .about__majors {
+    margin: 50px 0 0 0;
     display: flex;
-    justify-content:space-evenly;
-    margin: 60px 0px;
+    justify-content:space-around;
+    align-items: center;
 }
 
 .major__icon {
@@ -224,8 +234,7 @@ p {
     line-height: 190px;
     border: 7px solid #ffc3ae;
     border-radius: 50%;
-    margin-bottom: 20px;
-    margin-inline: 40px;
+
 }
 
 .major__icon i{
@@ -338,12 +347,12 @@ p {
 .skill_bar {
     width: 100%;
     height: 3px;
-    background-color: #888888;
+    background-color: #ff7f502d;
 }
 
 .skill_value {
     height: 3px;
-    background-color: orange;
+    background-color: #FF7F50;
 }
 
 .skill_description {
@@ -370,7 +379,7 @@ p {
 }
 
 .category__btn:hover {
-    background-color: orange;
+    background-color: #ff8b60;
     color: white;
 }
 
@@ -460,6 +469,7 @@ p {
 
 #testimonial {
     background-color: #fafafa;
+    padding: 20px;
 }
 
 .testimonials {
@@ -535,4 +545,115 @@ p {
 .contact_links i:hover,
 .contact_links img:hover{
     transform: scale(1.2);
+}
+
+/* For below 1080px screen width */
+@media screen and (max-width: 1080px) {
+    .category__btn{
+        padding: 6px;
+        margin: 3px;
+        font-size: var(--font-small);
+        position: relative;
+    }
+
+    .category__count{
+        display: none;
+    }
+
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+    
+
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .about__majors {
+        flex-direction: column;
+    }
+
+    .major {
+        margin-bottom: 38px;
+    }
+
+    .skillset {
+        flex-direction: column;
+    }
+
+    .skillset_left {
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 0px;
+    }
+
+    .tools {
+        border-top-right-radius: 0px;
+    }
+
+    .skillset_right {
+        border-bottom-left-radius: 25px;
+    }
+
+    .project {
+        flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+        display: none;
+    }
+
+    .testimonal__speech-bubble {
+        border-radius: 25px;
+    }
+
+    .testimonal__speech-bubble p {
+        font-size: 15px;
+    }
+
+    #testimonial {
+        padding: 5px;
+    }
+
+    .category__btn{
+        padding: 3px;
+        margin: 1px;
+        font-size: 13px;
+        position: relative;
+    }
+
+    .work__categories {
+        margin: 10px;
+    }
+
+    #work {
+        padding: 22px;
+    }
+
+    .about__jobs {
+        margin-top: 40px;
+    }
+
+    .about_hi {
+        font-size: 17px;
+    }
+
+    .home__title {
+
+    }
+
+    h1 {
+        font-size: 40px;
+    }
 }
