--- a/style.css
+++ b/style.css
@@ -98,10 +98,34 @@ p {
 #navbar {
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-white);
+    background-color: transparent;
     align-items: center; 
-    padding: 16px;
+    padding: 8px;
+    padding-top: 0px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
+
+#navbar.navbar--down .navbar__logo {
+    transition: all 300ms ease-in-out;
+    opacity: 0; 
+}
+
+#navbar.navbar--down .navbar__menu{
+    flex-direction: column;
+    background-color: white;
+    transition: all 300ms ease-in-out;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    margin-right: 12px;
+}
+
+#navbar.navbar--down .navbar__menu__item{
+    font-size: 13px;
+    transition: all 300ms ease-in-out;
+}
+
 
 .navbar__menu {
     display: flex;
@@ -183,6 +207,7 @@ p {
 #home {
     background: url("imgs/home-background.jpg") center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
 }
 
@@ -322,7 +347,7 @@ p {
 
 .skillset_left {
     flex-basis: 60%;
-    background-color: #d1d1d1;
+    background-color: #ebebeb;
     padding: 20px 40px 50px 40px;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
@@ -330,7 +355,7 @@ p {
 
 .skillset_right {
     flex-basis: 40%;
-    background-color:  #ebebeb;
+    background-color: #d1d1d1;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
 }
@@ -656,5 +681,14 @@ p {
 
     .navbar__logo img{
         width: 80px;
+    }
+
+    .home_avatar {
+        width: 200px;
+        height: 200px;
+    }
+
+    .navbar__logo {
+        opacity: 0;
     }
 }
