--- a/style.css
+++ b/style.css
@@ -94,6 +94,27 @@ p {
     margin: 4px 0;
 }
 
+/* Arrow */
+.arrow{
+    position: fixed;
+    width: 20px;
+    bottom: 20px;
+    right: 0;
+    visibility: hidden;
+    transition: all 300ms ease;
+}
+
+.arrow img {
+    width: 60px;
+    filter: invert(49%) sepia(22%) saturate(5902%) hue-rotate(329deg) brightness(120%) contrast(107%);
+}
+
+.arrow.visible {
+    transition: all 300ms ease;
+    visibility: visible;
+    right: 60px;
+}
+
 /* Navbar */
 #navbar {
     display: flex;
@@ -109,11 +130,11 @@ p {
 
 #navbar.navbar--down .navbar__logo {
     transition: all 300ms ease-in-out;
-    opacity: 0; 
+    opacity: 0;
+    visibility: hidden;
 }
 
 #navbar.navbar--down .navbar__menu{
-    flex-direction: column;
     background-color: white;
     transition: all 300ms ease-in-out;
     border-radius: 10px;
@@ -123,9 +144,8 @@ p {
 
 #navbar.navbar--down .navbar__menu__item{
     font-size: 13px;
-    transition: all 300ms ease-in-out;
-}
 
+}
 
 .navbar__menu {
     display: flex;
