--- a/style.css
+++ b/style.css
@@ -128,28 +128,32 @@ p {
     z-index: 1;
 }
 
-#navbar.navbar--down {
-    padding: 0;
-    width: 120px;
-    right: 10px;
+@media screen and (min-width: 769px){
+    #navbar.navbar--down {
+        padding: 0;
+        width: 120px;
+        right: 10px;
+    }
+    
+    #navbar.navbar--down .navbar__logo {
+        display: none;
+    }
+    
+    #navbar.navbar--down .navbar__menu{
+        flex-direction: column;
+        background-color: white;
+        transition: all 300ms ease-in-out;
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        margin-right: 12px;
+    }
+    
+    #navbar.navbar--down .navbar__menu__item{
+        font-size: 14px;
+    }
 }
 
-#navbar.navbar--down .navbar__logo {
-    display: none;
-}
 
-#navbar.navbar--down .navbar__menu{
-    flex-direction: column;
-    background-color: white;
-    transition: all 300ms ease-in-out;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    margin-right: 12px;
-}
-
-#navbar.navbar--down .navbar__menu__item{
-    font-size: 14px;
-}
 
 .navbar__menu {
     display: flex;
@@ -631,12 +635,17 @@ p {
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
-        display: block;
+        display: block; 
+        position: fixed;
+        top: 25px;
+        right: 25px;
     }
 
     #navbar {
         flex-direction: column;
         align-items: flex-start;
+        background-color: white;
+        border-bottom: 1px solid var(--color-light-white);
     }
 
     .navbar__menu {
@@ -645,6 +654,12 @@ p {
         width: 100%;
         display: none;
     }
+
+    .navbar__menu.open {
+        display: block;
+    }
+
+
 
     .about__majors {
         flex-direction: column;
