--- a/style.css
+++ b/style.css
@@ -636,8 +636,9 @@ p {
     .navbar__toggle-btn {
         display: block; 
         position: fixed;
-        top: 25px;
-        right: 12px;
+        top: 26px;
+        right: 10px;
+        padding: 0px;
     }
 
     #navbar {
