--- a/style.css
+++ b/style.css
@@ -101,7 +101,11 @@ p {
     bottom: 20px;
     right: 0;
     visibility: hidden;
-    transition: all 200ms ease;
+    transition: all 300ms ease;
+}
+
+.arrow:hover img{
+    filter: invert(52%) sepia(42%) saturate(531%) hue-rotate(186deg) brightness(99%) contrast(88%);
 }
 
 .arrow img {
@@ -241,6 +245,7 @@ p {
     width: 250px;
     height: 250px;
     border-radius: 15%;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .home__contact {
@@ -428,7 +433,6 @@ p {
     color: #000000;
     padding: 8px 30px 8px 45px;
     margin-inline: 4px;
-    transition: all var(--animation-duration) ease;
 }
 
 .category__btn.selected {
@@ -456,10 +460,9 @@ p {
     display: inline-block;
     line-height: 20px;
     position: relative;
-    top: -20px;
     left: 10px;
     opacity: 0;
-    transition: all var(--animation-duration) ease;
+    transition: all 200ms ease;
 }
 
 .work_projects {
@@ -489,8 +492,8 @@ p {
 }
 
 .project_img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .project_description {
@@ -504,13 +507,11 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transform: translateY(10px);
-    transition: all var(--animation-duration) ease;
+    transition: all 200ms ease;
 }
 
 .project:hover .project_description {
     opacity: 70%;
-    transform: translateY(0px);
 }
 
 .project_description h3 {
@@ -715,6 +716,7 @@ p {
         font-size: 14px;
         padding: 3px;
         margin: 1px;
+        margin-bottom: 12px;
     }
 
     #work {
