--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     cursor: default;
+    user-select: none;
 }
 
 a {
@@ -63,6 +64,7 @@ button {
     cursor: pointer;
     border: none;
     outline: none;
+    user-select: none;
 }
 
 /* Typography */
@@ -469,7 +471,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 900px;
+    max-width: 1000px;
     margin: auto;
     opacity: 1;
     transition: all 200ms ease;
@@ -482,8 +484,8 @@ p {
 
 .project {
     position: relative;
-    width: 280px;
-    height: 250px;
+    width: 240px;
+    height: 200px;
     margin: 2px;
     background-color: var(--color-light-white);
     display: flex;
