--- a/style.css
+++ b/style.css
@@ -428,7 +428,8 @@ p {
 }
 
 .category__btn {
-  border: 1px solid var(--color-dark-white);
+  /* border: 1px solid var(--color-dark-white); */
+  background-color: whitesmoke;
   font-weight: 50;
   border-radius: 6px;
   font-size: var(--font-small);
@@ -486,7 +487,7 @@ p {
   width: 240px;
   height: 200px;
   margin: 2px;
-  background-color: var(--color-light-white);
+  background-color: rgb(248, 248, 248);
   display: flex;
   justify-content: center;
   align-items: center;
