--- a/style.css
+++ b/style.css
@@ -106,14 +106,14 @@ p {
 }
 
 .arrow:hover img {
-  filter: invert(52%) sepia(42%) saturate(531%) hue-rotate(186deg)
-    brightness(99%) contrast(88%);
+  filter: invert(60%) sepia(61%) saturate(1885%) hue-rotate(327deg)
+    brightness(105%) contrast(101%);
 }
 
 .arrow img {
   width: 60px;
-  filter: invert(49%) sepia(22%) saturate(5902%) hue-rotate(329deg)
-    brightness(120%) contrast(107%);
+  filter: invert(60%) sepia(61%) saturate(1885%) hue-rotate(327deg)
+    brightness(130%) contrast(100%);
 }
 
 .arrow.visible {
@@ -245,8 +245,8 @@ p {
 }
 
 .home_avatar {
-  width: 250px;
-  height: 250px;
+  width: 230px;
+  height: 230px;
   border-radius: 15%;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
@@ -262,7 +262,7 @@ p {
 }
 
 .home__contact:hover {
-  color: #718cd6;
+  color: #ff5213;
 }
 
 /* Section Common */
@@ -303,12 +303,12 @@ p {
 }
 
 .major__icon:hover {
-  border-color: #b0bcdf;
+  border-color: #ff7f50;
 }
 
 .major__icon:hover i {
-  color: #718cd6;
-  border-color: #b0bcdf;
+  color: #ff5213;
+  transform: scale(1.2);
 }
 
 .major__title,
@@ -541,6 +541,10 @@ p {
 
 /* Contact */
 
+.tistory {
+  filter: brightness(113%);
+}
+
 #contact {
   padding-bottom: 12px;
 }
@@ -560,7 +564,7 @@ p {
 .contact_links i {
   font-size: 40px;
   color: rgb(255, 85, 0);
-  padding: 5px;
+  padding: 8px;
 }
 
 .contact_links img {
